Adding yaml config

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>RELEASE</version>
+		</dependency>
     </dependencies>
 
 	<build>
