--- a/src/main/resources/config-no-modification.yaml
+++ b/src/main/resources/config-no-modification.yaml
@@ -1,3 +1,8 @@
+newLine:
+  - 0.0  # Probability for no newline
+  - 1.0  # Probability for one newline
+  - 0.0  # Probability for two newlines
+  - 0.0  # Probability for three newlines
 doubleTab: 0
 noTab: 0
 doubleSpace: 0
