--- a/src/main/resources/config-no-modification.yaml
+++ b/src/main/resources/config-no-modification.yaml
@@ -3,9 +3,15 @@ newline:
   - 1.0  # Probability for one newline
   - 0.0  # Probability for two newlines
   - 0.0  # Probability for three newlines
-doubleTab: 0
-noTab: 0
-doubleSpace: 0
-noSpace: 0
+tab:
+  - 0.0  # Probability for no tab
+  - 1.0  # Probability for one tab
+  - 0.0  # Probability for two tabs
+  - 0.0  # Probability for three tabs
+space:
+  - 0.0  # Probability for no space
+  - 1.0  # Probability for one space
+  - 0.0  # Probability for two spaces
+  - 0.0  # Probability for three spaces
 newLineInsteadOfSpace: 0
 spaceInsteadOfNewline: 0
