--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -3,9 +3,15 @@ newline:
   - 0.6  # Probability for one newline
   - 0.2  # Probability for two newlines
   - 0.0  # Probability for three newlines
-doubleTab: 0.2
-noTab: 0.2
-doubleSpace: 0.2
-noSpace: 0.2
+tab:
+  - 0.2  # Probability for no tab
+  - 0.6  # Probability for one tab
+  - 0.2  # Probability for two tabs
+  - 0.0  # Probability for three tabs
+space:
+  - 0.2  # Probability for no space
+  - 0.6  # Probability for one space
+  - 0.2  # Probability for two spaces
+  - 0.0  # Probability for three spaces
 newLineInsteadOfSpace: 0.2
 spaceInsteadOfNewline: 0.2
