--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -3,7 +3,12 @@ newline:
   - 0.6  # Probability for one newline
   - 0.2  # Probability for two newlines
   - 0.0  # Probability for three newlines
-tab:
+tabInc:
+  - 0.2  # Probability for no tab
+  - 0.6  # Probability for one tab
+  - 0.2  # Probability for two tabs
+  - 0.0  # Probability for three tabs
+tabDec:
   - 0.2  # Probability for no tab
   - 0.6  # Probability for one tab
   - 0.2  # Probability for two tabs
