--- a/src/main/resources/config-no-modification.yaml
+++ b/src/main/resources/config-no-modification.yaml
@@ -1,22 +1,16 @@
 newline:
   - 0.0  # Probability for no newline
   - 1.0  # Probability for one newline
-  - 0.0  # Probability for two newlines
-  - 0.0  # Probability for three newlines
 tabInc:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
-  - 0.0  # Probability for two tabs
-  - 0.0  # Probability for three tabs
 tabDec:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
-  - 0.0  # Probability for two tabs
-  - 0.0  # Probability for three tabs
 space:
   - 0.0  # Probability for no space
   - 1.0  # Probability for one space
-  - 0.0  # Probability for two spaces
-  - 0.0  # Probability for three spaces
 newLineInsteadOfSpace: 0
 spaceInsteadOfNewline: 0
+incTabInsteadOfDecTab: 0
+decTabInsteadOfIncTab: 0
