--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -3,12 +3,12 @@ newline:
   - 0.6  # Probability for one newline
   - 0.2  # Probability for two newlines
   - 0.0  # Probability for three newlines
-tabInc:
+incTab:
   - 0.2  # Probability for no tab
   - 0.6  # Probability for one tab
   - 0.2  # Probability for two tabs
   - 0.0  # Probability for three tabs
-tabDec:
+decTab:
   - 0.2  # Probability for no tab
   - 0.6  # Probability for one tab
   - 0.2  # Probability for two tabs
