--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>fr.inria.gforge.spoon</groupId>
-	<artifactId>spoon-examples</artifactId>
+	<groupId>de.uni_passau.fim.se2.rdh</groupId>
+	<artifactId>readability-decreasing-heuristics</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>spoon-examples</name>
+	<name>readability-decreasing-heuristics</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -19,38 +19,39 @@
 			<pVersion.surefire>2.22.1</pVersion.surefire>
 	</properties>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.junit</groupId>
+				<artifactId>junit-bom</artifactId>
+				<version>5.9.3</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
-		<dependency>
-			<groupId>org.mdkt.compiler</groupId>
-			<artifactId>InMemoryJavaCompiler</artifactId>
-			<version>${version.memcompiler}</version>
-		</dependency>
 		<dependency>
 			<groupId>fr.inria.gforge.spoon</groupId>
 			<artifactId>spoon-core</artifactId>
-			<version>10.1.0</version>
+			<version>10.3.0</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
 		</dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>RELEASE</version>
+            <version>1.18.26</version>
             <scope>compile</scope>
         </dependency>
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
-			<version>RELEASE</version>
+			<version>2.0</version>
 		</dependency>
     </dependencies>
 
@@ -70,7 +71,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${pVersion.surefire}</version>
 				<configuration>
-					<!-- the following is required to have the same execution semantics 
+					<!-- the following is required to have the same execution semantics
 						as eclipse (hence all tests passing) -->
 					<useSystemClassLoader>false</useSystemClassLoader>
 					<forkCount>1</forkCount>
