--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>fr.inria.gforge.spoon.labs</groupId>
+            <artifactId>gumtree-spoon-ast-diff</artifactId>
+            <version>1.62</version>
+        </dependency>
+
     </dependencies>
 
 
