--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>readability-decreasing-heuristics</name>
-    <url>http://maven.apache.org</url>
+    <url>https://maven.apache.org</url>
 
 	<dependencyManagement>
 		<dependencies>
