--- a/src/main/resources/config-realistic.yaml
+++ b/src/main/resources/config-realistic.yaml
@@ -2,4 +2,4 @@ condaPath: C:/Users/lukas/anaconda3/envs/code2vec
 modelPath: C:/Users/lukas/PycharmProjects/Code2Vec/models/java14_model/saved_model_iter8.release
 pythonScriptPath: C:/Users/lukas/PycharmProjects/code2vec
 scope: FILE # FILE, DIRECTORY
-renameMethodMode: ITERATIVE # ITERATIVE, REALISTIC
+renameMethodMode: REALISTIC # ITERATIVE, REALISTIC
