--- a/pom.xml
+++ b/pom.xml
@@ -89,19 +89,15 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>fr.inria.gforge.spoon</groupId>
-            <artifactId>spoon-core</artifactId>
-            <version>10.4.1-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>fr.inria.gforge.spoon</groupId>
-            <artifactId>spoon-core</artifactId>
-            <version>10.4.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
+    <repositories>
+       <!-- Spoon fork -->
+        <repository>
+            <id>fr.inria.gforge.spoon</id>
+            <name>Spoon</name>
+            <url>https://github.com/LuKrO2011/spoon.git</url>
+        </repository>
+    </repositories>
 
 
     <build>
