--- a/pom.xml
+++ b/pom.xml
@@ -89,13 +89,21 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <!-- Local spoon for testing and running via IDE -->
+        <dependency>
+            <groupId>fr.inria.gforge.spoon</groupId>
+            <artifactId>spoon-core</artifactId>
+            <version>10.4.1-SNAPSHOT-jar-with-dependencies</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../spoon/target/spoon-core-10.4.1-SNAPSHOT-jar-with-dependencies.jar
+            </systemPath>
+        </dependency>
     </dependencies>
     <repositories>
-       <!-- Spoon fork -->
+        <!-- Spoon fork for building -->
         <repository>
             <id>fr.inria.gforge.spoon</id>
-            <name>Spoon</name>
-            <url>https://github.com/LuKrO2011/spoon.git</url>
+            <url>file://${project.basedir}/../spoon</url>
         </repository>
     </repositories>
 
@@ -153,5 +161,5 @@
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
-	</build>
+    </build>
 </project>
