--- a/pom.xml
+++ b/pom.xml
@@ -93,17 +93,15 @@
         <dependency>
             <groupId>fr.inria.gforge.spoon</groupId>
             <artifactId>spoon-core</artifactId>
-            <version>10.4.1-SNAPSHOT-jar-with-dependencies</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../spoon/target/spoon-core-10.4.1-SNAPSHOT-jar-with-dependencies.jar
-            </systemPath>
+            <version>10.4.1-FORK</version>
         </dependency>
     </dependencies>
     <repositories>
-        <!-- Spoon fork for building -->
+<!--        Spoon fork for building-->
         <repository>
-            <id>fr.inria.gforge.spoon</id>
-            <url>file://${project.basedir}/../spoon</url>
+            <id>de.uni_passau.fim.se2.spoon</id>
+            <name>spoon</name>
+            <url>file:${project.basedir}/../spoon</url>
         </repository>
     </repositories>
 
