--- a/pom.xml
+++ b/pom.xml
@@ -93,17 +93,9 @@
         <dependency>
             <groupId>fr.inria.gforge.spoon</groupId>
             <artifactId>spoon-core</artifactId>
-            <version>10.4.1-FORK</version>
+            <version>10.4.0</version>
         </dependency>
     </dependencies>
-    <repositories>
-<!--        Spoon fork for building-->
-        <repository>
-            <id>de.uni_passau.fim.se2.spoon</id>
-            <name>spoon</name>
-            <url>file:${project.basedir}/../spoon</url>
-        </repository>
-    </repositories>
 
 
     <build>
