--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,21 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.7.3.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs</artifactId>
+                        <version>4.7.3</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <excludeFilterFile>config/spot_bugs_ignore.xml</excludeFilterFile>
+                </configuration>
+            </plugin>
         </plugins>
         <resources>
             <resource>
