--- a/src/main/resources/config-realistic.yaml
+++ b/src/main/resources/config-realistic.yaml
@@ -1,6 +1,6 @@
 condaPath: C:/Users/lukas/anaconda3/envs/code2vec
 modelPath: C:/Users/lukas/PycharmProjects/Code2Vec/models/java14_model/saved_model_iter8.release
 pythonScriptPath: C:/Users/lukas/PycharmProjects/code2vec
-scope: FILE # FILE, DIRECTORY
-renameMethodMode: REALISTIC # ITERATIVE, REALISTIC
-outputMode: NEW_DIRECTORY # SAME_DIRECTORY (as input), NEW_DIRECTORY (in output folder) (only for scope FILE and directory input)
+scope: FILE
+renameMethodMode: REALISTIC
+outputMode: NEW_DIRECTORY
