--- a/res/probabilities-comments-remove.yaml
+++ b/res/probabilities-comments-remove.yaml
@@ -8,17 +8,17 @@ decTab:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
 space:
-  - 0.0  # Probability for no space
+  - 0.0  # Probability for no space. Must be 0
   - 1.0  # Probability for one space
 newLineInsteadOfSpace: 0
 spaceInsteadOfNewline: 0
 incTabInsteadOfDecTab: 0
 decTabInsteadOfIncTab: 0
-renameVariable: 0
-renameField: 0
-renameMethod: 0
+renameVariable: 0.0
+renameField: 0.0
+renameMethod: 0.0
 inlineMethod: 0
-removeComment: 0
+removeComment: 0.7
 add0: 0
 insertBraces: 0
 starImport: 0
