--- a/res/probabilities-misc.yaml
+++ b/res/probabilities-misc.yaml
@@ -8,19 +8,19 @@ decTab:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
 space:
-  - 0.0  # Probability for no space
+  - 0.0  # Probability for no space. Must be 0
   - 1.0  # Probability for one space
 newLineInsteadOfSpace: 0
 spaceInsteadOfNewline: 0
 incTabInsteadOfDecTab: 0
 decTabInsteadOfIncTab: 0
-renameVariable: 0
-renameField: 0
-renameMethod: 0
+renameVariable: 0.0
+renameField: 0.0
+renameMethod: 0.0
 inlineMethod: 0
-removeComment: 0
-add0: 0
-insertBraces: 0
-starImport: 0
-inlineField: 0
-partiallyEvaluate: 0
+removeComment: 0.0
+add0: 0.4
+insertBraces: 0.4
+starImport: 0.0 # Not needed, methods split anyway
+inlineField: 0.4
+partiallyEvaluate: 0.4
