--- a/res/probabilities-newlines-many.yaml
+++ b/res/probabilities-newlines-many.yaml
@@ -1,6 +1,11 @@
 newline:
   - 0.0  # Probability for no newline
-  - 1.0  # Probability for one newline
+  - 0.4  # Probability for one newline
+  - 0.3  # Probability for two newlines
+  - 0.2  # Probability for three newlines
+  - 0.05  # Probability for four newlines
+  - 0.025  # Probability for five newlines
+  - 0.025  # Probability for six newlines
 incTab:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
@@ -8,9 +13,9 @@ decTab:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
 space:
-  - 0.0  # Probability for no space
+  - 0.0  # Probability for no space. Must be 0
   - 1.0  # Probability for one space
-newLineInsteadOfSpace: 0
+newLineInsteadOfSpace: 0.2
 spaceInsteadOfNewline: 0
 incTabInsteadOfDecTab: 0
 decTabInsteadOfIncTab: 0
