--- a/res/probabilities-rename.yaml
+++ b/res/probabilities-rename.yaml
@@ -8,15 +8,15 @@ decTab:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
 space:
-  - 0.0  # Probability for no space
+  - 0.0  # Probability for no space. Must be 0
   - 1.0  # Probability for one space
 newLineInsteadOfSpace: 0
 spaceInsteadOfNewline: 0
 incTabInsteadOfDecTab: 0
 decTabInsteadOfIncTab: 0
-renameVariable: 0
-renameField: 0
-renameMethod: 0
+renameVariable: 0.7
+renameField: 0.7
+renameMethod: 0.7
 inlineMethod: 0
 removeComment: 0
 add0: 0
