--- a/res/probabilities-spaces-few.yaml
+++ b/res/probabilities-spaces-few.yaml
@@ -8,9 +8,9 @@ decTab:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
 space:
-  - 0.0  # Probability for no space
+  - 0.0  # Probability for no space. Must be 0
   - 1.0  # Probability for one space
-newLineInsteadOfSpace: 0
+newLineInsteadOfSpace: 0.4
 spaceInsteadOfNewline: 0
 incTabInsteadOfDecTab: 0
 decTabInsteadOfIncTab: 0
