--- a/res/probabilities-tabs-few.yaml
+++ b/res/probabilities-tabs-few.yaml
@@ -2,13 +2,13 @@ newline:
   - 0.0  # Probability for no newline
   - 1.0  # Probability for one newline
 incTab:
-  - 0.0  # Probability for no tab
-  - 1.0  # Probability for one tab
+  - 0.7  # Probability for no tab
+  - 0.3  # Probability for one tab
 decTab:
-  - 0.0  # Probability for no tab
-  - 1.0  # Probability for one tab
+  - 0.7  # Probability for no tab
+  - 0.3  # Probability for one tab
 space:
-  - 0.0  # Probability for no space
+  - 0.0  # Probability for no space. Must be 0
   - 1.0  # Probability for one space
 newLineInsteadOfSpace: 0
 spaceInsteadOfNewline: 0
