--- a/res/config-realistic.yaml
+++ b/res/config-realistic.yaml
@@ -1,6 +1,6 @@
-condaPath: C:/Users/lukas/anaconda3/envs/code2vec
-modelPath: C:/Users/lukas/IdeaProjects/readability-decreasing-heuristics/code2vec/models/java14_model/saved_model_iter8.release
-pythonScriptPath: C:/Users/lukas/IdeaProjects/readability-decreasing-heuristics/code2vec
+condaPath: ~/miniconda3/envs/code2vec
+modelPath: /app/code2vec/models/java14_model/saved_model_iter8.release
+pythonScriptPath: /app/code2vec
 scope: FILE
 renameMethodMode: REALISTIC
 outputMode: STRUCTURED
