--- a/res2/probabilities-all-2.yaml
+++ b/res2/probabilities-all-2.yaml
@@ -1,21 +1,22 @@
 newline:
-  - 0.1  # Probability for no newline
-  - 0.8   # Probability for one newline
-  - 0.1  # Probability for two newlines
+  - 0.15  # Probability for no newline
+  - 0.75  # Probability for one newline
+  - 0.075   # Probability for two newlines
+  - 0.025   # Probability for three newlines
 incTab:
-  - 0.1  # Probability for no tab
+  - 0.1   # Probability for no tab
   - 0.85  # Probability for one tab
   - 0.05  # Probability for two tab
 decTab:
   - 0.05  # Probability for no tab
-  - 0.9  # Probability for one tab
+  - 0.9   # Probability for one tab
   - 0.05  # Probability for two tab
 space:
-  - 0.0  # Probability for no space. Must be 0
-  - 0.9  # Probability for one space
+  - 0.0    # Probability for no space. Must be 0
+  - 0.9    # Probability for one space
   - 0.075  # Probability for two space
   - 0.025  # Probability for three space
-newLineInsteadOfSpace: 0.2
+newLineInsteadOfSpace: 0.75
 spaceInsteadOfNewline: 0.025
 incTabInsteadOfDecTab: 0.025
 decTabInsteadOfIncTab: 0.025
