--- a/res2/probabilities-newline-instead-of-space.yaml
+++ b/res2/probabilities-newline-instead-of-space.yaml
@@ -1,8 +1,6 @@
 newline:
   - 0.0  # Probability for no newline
-  - 0.8  # Probability for one newline
-  - 0.15  # Probability for two newlines
-  - 0.05  # Probability for three newlines
+  - 1.0  # Probability for one newline
 incTab:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
@@ -10,9 +8,9 @@ decTab:
   - 0.0  # Probability for no tab
   - 1.0  # Probability for one tab
 space:
-  - 0.0  # Probability for no space. Must be 0
+  - 0.0  # Probability for no space
   - 1.0  # Probability for one space
-newLineInsteadOfSpace: 0
+newLineInsteadOfSpace: 0.15
 spaceInsteadOfNewline: 0
 incTabInsteadOfDecTab: 0
 decTabInsteadOfIncTab: 0
@@ -24,5 +22,5 @@ removeComment: 0
 add0: 0
 insertBraces: 0
 starImport: 0
-inlineField: 0
+inlineField: 0.2
 partiallyEvaluate: 0
