Removing absolute paths from config files

--- a/src/main/resources/config-structured.yaml
+++ b/src/main/resources/config-structured.yaml
@@ -1,6 +1,6 @@
 condaPath: / #[PATH_TO_ANACONDA]/envs/[CODE2VEC_ENV]
-modelPath: / #[PATH_TO_CODE2VEC_MODEL].release
-pythonScriptPath: / #[PATH_TO_CODE2VEC_PROJECT]
+modelPath: ../../../code2vec/models/java14_model/saved_model_iter8.release #[PATH_TO_CODE2VEC_MODEL].release
+pythonScriptPath: ../../../code2vec #[PATH_TO_CODE2VEC_PROJECT]
 scope: FILE
 renameMethodMode: ITERATIVE
 outputMode: STRUCTURED
